adding a new conditional flag to check if the caches has been created already or not in case of apache ignite is not auto started part of the plugin and it is already up and running and cache configuration is already done

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,6 +14,8 @@ akka {
         cache-prefix = "akka-journal"
         // Should be based into the the dara grid topology
         cache-backups = 1
+         // if ignite is already started in a separate standalone grid where journal cache is already created
+        cachesAlreadyCreated = false
       }
     }
 
@@ -25,6 +27,8 @@ akka {
         cache-prefix = "akka-snapshot"
         // Should be based into the the dara grid topology
         cache-backups = 1
+        // if ignite is already started in a separate standalone grid where snapshot cache is already created
+        cachesAlreadyCreated = false
       }
     }
   }
