adding support to event tagging storing plus enable Ignite binary objects in store queries

--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -3,7 +3,7 @@ akka {
 
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
-
+    allow-java-serialization = on
     default-dispatcher {
       # Configuration for the fork join pool
       fork-join-executor {
@@ -64,5 +64,5 @@ ignite {
   enableFilePersistence = true
   igniteConnectorPort = 11211
   igniteServerPortRange = "47500..47509"
-  ignitePersistenceFilePath = "./data"
+  ignitePersistenceFilePath = "data"
 }
