Add support to event tagging plus use the binary objects in ignite query for journal operations

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -50,12 +50,12 @@ ignite {
   asyncCallbackPoolSize = 4
   peerClassLoadingEnabled = false
   // to enable or disable durable memory persistance
-  enableFilePersistence = true
+  enableFilePersistence = false
   // used for grid cluster connectivity
   igniteConnectorPort = 11211
   // used for grid cluster connectivity
   igniteServerPortRange = "47500..47509"
   //durable memory persistance storage file system path
-  ignitePersistenceFilePath = "./data"
+  ignitePersistenceFilePath = "data"
 }
 
