--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -61,7 +61,7 @@ ignite {
   rebalanceThreadPoolSize = 1
   asyncCallbackPoolSize = 4
   peerClassLoadingEnabled = false
-  enableFilePersistence = true
+  enableFilePersistence = false
   igniteConnectorPort = 11211
   igniteServerPortRange = "47500..47509"
   ignitePersistenceFilePath = "data"
