--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.romeh</groupId>
     <artifactId>akka-persistence-ignite</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1</version>
 
     <name>akka-persistence-ignite</name>
     <description>Ignite persistence journal plugin for akka persistence</description>
@@ -16,7 +16,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <akka.version>2.5.18</akka.version>
-        <ignite.version>2.6.0</ignite.version>
+        <ignite.version>2.7.0</ignite.version>
         <slf4j.version>1.7.25</slf4j.version>
         <lombok.version>1.16.18</lombok.version>
         <scalatest.version>3.0.4</scalatest.version>
@@ -175,9 +175,9 @@
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
-                                <phase>verify</phase>
+                                <!--  <phase>verify</phase>-->
                                 <goals>
-                                    <goal>jar-no-fork</goal>
+                                    <goal>jar</goal>
                                 </goals>
                             </execution>
                         </executions>
