unit test update

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,5 +1,5 @@
 #################################################
-# Akka Persistence Idnite Reference Config File #
+# Akka Persistence Ignite Reference Config File #
 #################################################
 
 akka {
